Release Notes - Metadata Aggregator - Version 0.9.0
===================================================

Highlights
    * Now using Spring resources instead of (now deprecated) Shibboleth
      resources.

** Task
    * [MDA-124] - Move from using Shibboleth resources to using Spring ones
    * [MDA-125] - can't set some properties on XMLSignatureValidationStage from
                  Spring configurations
    * [MDA-127] - simplify output from StatusMetadataLoggingStage
    * [MDA-128] - use @Override annotation in MDA sources
    * [MDA-129] - remove semi-functional ElementFormattingStage


Release Notes - Metadata Aggregator - Version 0.8.0
===================================================

Highlights
   * API changes for new Shibboleth coding conventions, and in the
     use of generic types
   * Signature validation can reject empty references, blacklist
     algorithm URIs and protects against "wrapping" attacks.
   * New stage to extract MDRPI registrationInfo into item metadata.
   * Moved to Java 7, Apache Santuario V1.5
   * Improved CLI experience
   * bug fixes

   
API Changes
   * DomElementItem becomes DOMElementItem
   * DomElementSerializer becomes DOMElementSerializer
   * DomFilesystemSourceStage becomes DOMFilesystemSourceStage
   * DomResourceSourceStage becomes DOMResourceSourceStage
   * domResource bean properties become DOMResource
      * getDomResource becomes getDOMResource
      * setDomResource becomes setDOMResource
   * xpathExpression bean properties become XPathResource
      * getXpathExpression becomes getXPathExpression
      * setXpathExpression becomes setXPathExpression
   * xslResource bean properties become XSLResource
      * getXslResource becomes getXSLResource
      * setXslResource becomes setXSLResource
   * BaseDomTest test class becomes BaseDOMTest
   * Stages and Pipelines with generic types are parameterised by the
     type *wrapped* in the Item, not the implementation type.  For example,