@@ -1,48 +1,0 @@
-/*
- * Licensed to the University Corporation for Advanced Internet Development, 
- * Inc. (UCAID) under one or more contributor license agreements.  See the 
- * NOTICE file distributed with this work for additional information regarding
- * copyright ownership. The UCAID licenses this file to You under the Apache 
- * License, Version 2.0 (the "License"); you may not use this file except in 
- * compliance with the License.  You may obtain a copy of the License at
- *
- *    http://www.apache.org/licenses/LICENSE-2.0
- *
- * Unless required by applicable law or agreed to in writing, software
- * distributed under the License is distributed on an "AS IS" BASIS,
- * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
- * See the License for the specific language governing permissions and
- * limitations under the License.
- */
-
-package net.shibboleth.metadata.dom.saml;
-
-import java.util.Collection;
-
-import javax.annotation.Nonnull;
-import javax.annotation.concurrent.ThreadSafe;
-
-import net.shibboleth.metadata.Item;
-import net.shibboleth.metadata.pipeline.BaseStage;
-import net.shibboleth.metadata.pipeline.StageProcessingException;
-import net.shibboleth.utilities.java.support.annotation.constraint.NonnullElements;
-
-import org.w3c.dom.Element;
-
-/**
- * This stage is not yet implemented.
- * 
- * For each metadata collection element that is a SAML EntitiesDescriptor this stage will, for each descendant
- * EntitiesDescriptor and EntityDescriptor, determine the shortest cache duration of all a given descandant's ancestors
- * and set that on the given descendant.
- */
-@ThreadSafe
-public class PushDownCacheDurationStage extends BaseStage<Element> {
-
-    /** {@inheritDoc} */
-    @Override protected void doExecute(@Nonnull @NonnullElements final Collection<Item<Element>> metadataCollection)
-            throws StageProcessingException {
-        // TODO Auto-generated method stub
-
-    }
-}
